# subconverter

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README-cn.md  README-docker.md  README.md  build.alpine.release.sh  build.clang.sh  build.macos.release.sh  config.termux.sh  emoji.html  forcerule.yml  ini_reader.h  logger.cpp  logger.h  main.cpp  mellow.conf  misc.cpp  misc.h  multithread.h  nodeinfo.h  nodemanip.cpp  nodemanip.h  pref.ini  printout.h  rapidjson_extra.cpp  rapidjson_extra.h  simple_base.yml  socket.h  speedtestutil.cpp  speedtestutil.h  subexport.cpp  subexport.h  surfboard.conf  surge.conf  version.h  webget.cpp  webget.h  (+5 more)
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-to-gist.yml  build.yml  docker.yml
base/: example_external_config.ini  generate.ini  gistconf.ini  pref-new.yml  pref.example.ini  pref.example.toml  pref.example.yml  pref.ini  pref.yml  quan.conf  quanx.conf  simple_base.yml
base/base/: GeneralClashConfig.yml  all_base.tpl  clash_provider_test.yml  loon.conf  shadowsocks_base.json  singbox.json
base/config/: ACL4SSR.ini  ACL4SSR_AdblockPlus.ini  ACL4SSR_BackCN.ini  ACL4SSR_Mini.ini  ACL4SSR_Mini_Fallback.ini  ACL4SSR_Mini_MultiMode.ini  ACL4SSR_Mini_NoAuto.ini  ACL4SSR_NoApple.ini  ACL4SSR_NoAuto.ini  ACL4SSR_NoAuto_NoApple.ini  ACL4SSR_NoAuto_NoApple_NoMicrosoft.ini  ACL4SSR_NoMicrosoft.ini  ACL4SSR_Onlie.ini  ACL4SSR_Onlie_NoAuto.ini  ACL4SSR_Online.ini  ACL4SSR_Online_AdblockPlus.ini  ACL4SSR_Online_Full.ini  ACL4SSR_Online_Full_AdblockPlus.ini  ACL4SSR_Online_Full_Google.ini  ACL4SSR_Online_Full_MultiMode.ini  ACL4SSR_Online_Full_Netflix.ini  ACL4SSR_Online_Full_NoAuto.ini  ACL4SSR_Online_Mini.ini  ACL4SSR_Online_Mini_AdblockPlus.ini  ACL4SSR_Online_Mini_Fallback.ini  ACL4SSR_Online_Mini_MultiCountry.ini  ACL4SSR_Online_Mini_MultiMode.ini  ACL4SSR_Online_Mini_NoAuto.ini  ACL4SSR_Online_MultiCountry.ini  ACL4SSR_Online_NoAuto.ini  ACL4SSR_Online_NoReject.ini  ACL4SSR_WithChinaIp.ini  ACL4SSR_WithChinaIp_WithGFW.ini  ACL4SSR_WithGFW.ini  GeneralClashConfig.yml  example_external_config.ini  example_external_config.toml  example_external_config.yml
base/profiles/: example_profile.ini
base/rules/: HKMTMedia.list  LocalAreaNetwork.list  MSServices.list
base/rules/ACL4SSR/Clash/: Apple.list  BanAD.list  BanEasyList.list  BanEasyListChina.list  BanEasyPrivacy.list  BanProgramAD.list  ChinaCompanyIp.list  ChinaDomain.list  ChinaIp.list  ChinaMedia.list  Download.list  GoogleCN.list  LocalAreaNetwork.list  Microsoft.list  Netflix.list  OneDrive.list  ProxyGFWlist.list  ProxyLite.list  ProxyMedia.list  Telegram.list  UnBan.list  Xbox.list
base/rules/ConnersHua/Surge/: BacktoCN.list
base/rules/NobyDa/Surge/: AdRule.list  AdRuleRegex.list  AdRuleTest.list  Apple.list  (+2 more)
base/rules/lhie1/: Netease Music IP.list
base/snippets/: emoji.toml  emoji.txt  emoji_txt2toml.py  groups.toml  groups.txt  groups_forcerule.toml  groups_forcerule.txt  rename_node.js  rename_node.toml  rename_node.txt  rulesets.toml  rulesets.txt  rulesets_remote.txt
cmake/: FindDuktape.cmake  FindJPCRE2.cmake  FindLibCron.cmake  FindLibEvent.cmake  FindPCRE2.cmake  FindPCRECPP.cmake  FindQuickJS.cmake  FindRapidjson.cmake
doc/resources/: emoji.html
include/: httplib.h  inja.hpp  jpcre2.hpp  quickjspp.hpp  未命名绘图.drawio
include/nlohmann/: json.hpp
quickjs/: CMakeLists.txt  quickjs.c  quickjs.h  update.sh
quickjs/patches/: getclassid.patch
replacements/: generate.ini  pref.toml
replacements/profiles/: jms.ini
replacements/snippets/: my-custom-domains.txt  my-direct-domains.txt
rules/: LocalAreaNetwork.list
rules/NobyDa/Surge/: AdRule.list  AdRuleRegex.list  AdRuleTest.list
rules/lhie1/Surge3/: Apple.list  Domestic.list  GlobalTV.list  Reject.list  Speedtest.list
scripts/: Dockerfile  Dockerfile.aarch64  Dockerfile.dev  build.alpine.release.sh  build.clang.sh  build.freebsd.release.sh  build.macos.dev.sh  build.macos.release.sh  build.ubuntu.dev.sh  build.windows.dev.sh  build.windows.release.sh  build.windows.sh  config.termux.sh  develop.freebsd.sh  merge_manifest.py  rules_config.conf  update_rules.py
scripts/hooks/: post_checkout
scripts/patches/: 0001-quickjs-libc-add-realpath-for-Windows.patch
src/: ini_reader.h  interfaces.cpp  interfaces.h  logger.cpp  logger.h  main.cpp  md5.cpp  md5.h  misc.cpp  misc.h  multithread.cpp  multithread.h  nodemanip.cpp  nodemanip.h  printout.h  rapidjson_extra.cpp  rapidjson_extra.h  script.cpp  script_duktape.h  socket.h  speedtestutil.cpp  speedtestutil.h  string_hash.h  subexport.cpp  subexport.h  template_jinja2.cpp  templates.cpp  templates.h  upload.cpp  upload.h  version.h  webget.cpp  webget.h  webserver.cpp  webserver.h  webserver_libevent.cpp  yamlcpp_extra.h
src/config/: binding.h  crontask.h  def.h  proxygroup.h  regmatch.h  ruleset.h
src/generator/config/: nodemanip.cpp  nodemanip.h  ruleconvert.cpp  ruleconvert.h  subexport.cpp  subexport.h
src/generator/template/: template_jinja2.cpp  templates.cpp  templates.h
src/handler/: interfaces.cpp  interfaces.h  multithread.cpp  multithread.h  settings.cpp  settings.h  upload.cpp  webget.cpp  webget.h
src/lib/: wrapper.cpp
src/parser/: infoparser.cpp  infoparser.h  subparser.cpp  subparser.h
src/parser/config/: proxy.h
src/script/: cron.cpp  cron.h  script.cpp  script.h  script_duktape.h  script_quickjs.cpp  script_quickjs.h
src/server/: socket.h  webserver.cpp  webserver.h  webserver_httplib.cpp  webserver_libevent.cpp
src/utils/: bitwise.h  checkpoint.h  codepage.cpp  codepage.h  defer.h  file.cpp  file.h  file_extra.h  lock.h  logger.cpp  logger.h  map_extra.h  network.cpp  network.h  rapidjson_extra.h  regexp.cpp  regexp.h  stl_extra.h  string.cpp  string.h  string_hash.h  system.cpp  system.h  tribool.h  urlencode.cpp  urlencode.h  yamlcpp_extra.h
src/utils/base64/: base64.cpp  base64.h
src/utils/ini_reader/: ini_reader.h
src/utils/md5/: md5.cpp  md5.h  md5_interface.h
xmake/: curl-static.lua  libcron.lua  quickjspp.lua  yaml-cpp-static.lua
(+370 files in other folders)
